ProductsEndpoint.getAllBrands and getAllSellers were added.
